--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -124,7 +124,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: mignw
+          name: mingw
           path: |
             build-mingw-x86/playfield.exe
           if-no-files-found: error
