--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -353,7 +353,7 @@ jobs:
       - name: Install deps
         run: |
           sudo apt-get update
-          sudo apt-get install -y cmake ninja-build flex bison
+          sudo apt-get install -y cmake ninja-build flex bison mingw-w64
 
       - name: Setup for Unity
         run: |
